--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "frontEnd",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "satellizer": "^0.15.5"
+  },
   "scripts": {
     "test": "gulp test"
   },
